tests/e2e/indentation_error.error
Error: syntax error in story at line 2, column 9

2|        x = x + item1
              ^

E0101: Variable `x` has not been defined.
