tests/e2e/indentation_error.story
foreach [1] as item1
	x = x + item1
    x = x - item1
